fixed some gui and deleting issues, should be fixed for good?

--- a/app/views/yojimboTest.html
+++ b/app/views/yojimboTest.html
@@ -8,7 +8,7 @@
 	<div ng-show="tabs.active()=='board'">
 		<div 
 			yoj-pile 
-			yoj-item-collection="eventDeck" 
+			yoj-item-collection="board" 
 			yoj-item-display-class="'front'"
 			yoj-item-settings="itemSettings">
 		</div>		
