--- a/app/views/yojimboTestOny.html
+++ b/app/views/yojimboTestOny.html
@@ -1,5 +1,5 @@
 <link rel="stylesheet" href="styles/wow-tcg.css">
-<div ng-controller="yojimboTestCtrl">
+<div ng-controller="yojimboTestOnyCtrl">
 
 	<ul class="nav nav-tabs">
 		<li ng-repeat="(i,tab) in tabs" ng-click="tabs.index = i" ng-class="isActive(tabs.index, i)"><a href="#">{{tab}}</a></li>
